...
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_inputs_form"
                    android:layout_marginTop="6dp"
                    android:layout_weight="0.5">

                    <EditText
                        android:id="@+id/input_peso_vivo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/campo_peso_vivo"
                        android:inputType="numberDecimal" />
                </android.support.design.widget.TextInputLayout>

...
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="0.5">

                    <EditText
                        android:id="@+id/input_data_complementar"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:drawableEnd="@drawable/ic_data_calendario"
                        android:drawableRight="@drawable/ic_data_calendario"
                        android:enabled="false"
                        android:focusable="false"
...
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_inputs_form"
                    android:layout_marginTop="@dimen/margin_inputs_form"
                    android:layout_weight="0.5">

                    <EditText
                        android:id="@+id/input_caminhada_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/campo_caminhada_vertical"
                        android:inputType="numberDecimal" />
                </android.support.design.widget.TextInputLayout>

...
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_inputs_form"
                    android:layout_marginTop="@dimen/margin_inputs_form"
                    android:layout_weight="0.5">

                    <EditText
                        android:id="@+id/input_caminhada_horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/campo_caminhada_horizontal"
                        android:inputType="numberDecimal" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
...
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_inputs_form"
                android:layout_marginTop="@dimen/margin_inputs_form">

                <EditText
                    android:id="@+id/input_semana_lactacao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/campo_semana_lactacao"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

...
                    android:text="@string/campo_eec5"
                    android:textSize="17sp" />
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/btn_salvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:drawableLeft="@drawable/save"
            android:onClick="salvarHistoricoAnimal"
            android:text="@string/save" />
...
