<resources>
    <string name="app_name">NutriCampus</string>
    <string name="switch_ativo">Ativo</string>
    <string name="switch_inativo">Inativo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configurações</string>

    <string name="logout_text">Sair</string>

    <string name="register_user">Cadastro Usuário</string>
    <string name="save">Salvar</string>
    <string name="atualizar">Atualizar</string>
    <string name="cancel">Cancelar</string>

    <string name="entrar">Entrar</string>
    <string name="recuperar_senha">Recuperar senha</string>

    <string name="alter_senha">Caso altere a senha, ocorrerá logout em sua conta.</string>
    <string name="menu_adicionar">Adicionar</string>
    <string name="menu_adicionar_propriedade">Adicionar uma propriedade</string>
    <string name="menu_adicionar_animal">Adicionar um animal</string>
    <string name="menu_visualizar_animais">Visualizar animais</string>
    <string name="menu_historico">Ver histórico de dados</string>
    <string name="menu_excluir">Excluir</string>
    <string name="menu_editar">Editar</string>
    <string name="menu_relatorio">Relatório</string>

    <string name="link_novo_cadastro">Não é cadastrado? <b>Crie sua conta</b></string>
    <string name="link_esqueceu_senha">Esqueceu sua senha?</string>

    <string name="msg_bem_vindo">Bem-vindo ao NutriCampus</string>
...
    <string name="msg_completar_cadastro">Complete %1$s com os demais dados</string>

    <string name="msg_cadastro_salvo">Cadastro realizado com sucesso</string>
    <string name="msg_cadastre_proprietario">Cadastre um proprietário</string>
    <string name="msg_cadastre_propriedade">Cadastre uma propriedade</string>
    <string name="msg_spinner_proprietario">Selecione um proprietário</string>
    <string name="msg_spinner_propriedade">Procure uma propriedade</string>

    <string name="msg_excluir_propriedade_sucesso">Propriedade removida com sucesso </string>
    <string name="msg_excluir_proprietario_sucesso">Proprietário removido com sucesso </string>
    <string name="msg_excluir_composto_sucesso">Composto removido com sucesso </string>
    <string name="msg_excluir_dieta_sucesso">Dieta removida com sucesso </string>
    <string name="msg_excluir_animal_sucesso">Animal removido com sucesso </string>
...
    <string name="campo_nenhuma_propriedade">Nenhuma propriedade cadastrada</string>

    <string name="campo_nenhum_proprietario">Nenhum proprietário cadastrado</string>
    <string name="campo_nenhum_composto">Nenhum composto cadastrado</string>
    <string name="campo_nenhuma_dieta">Nenhuma dieta cadastrada</string>
    <string name="campo_escolha_ativo">Animal está ativo?</string>
    <string name="campo_confirmacao_dados">Confirmar dados</string>
    <string name="campo_data">Data</string>
    <string name="campo_data_registro">Data de registro</string>
    <string name="campo_caminhada_vertical">Caminhada vertical (m)</string>
    <string name="campo_caminhada_horizontal">Caminhada Horizontal (m)</string>
    <string name="campo_eec">eec</string>
    <string name="campo_eec1">1</string>
...
